--- a/style.css
+++ b/style.css
@@ -1,24 +1,81 @@
 body {
     background-color: bisque;
     font-family: Helvetica, Arial, sans-serif;
+    box-sizing: border-box;
+    color: rgba(68, 61, 55, 0.831);
+    font-size: 18px;
+    width: 950px;
 }
+
 
 h1 {
     background-color: rgb(255, 145, 0);
     color: rgb(250, 249, 137);
     font-weight: bold;
+    padding: 18px;
+    
 }
 
 h2 {
     font-style: italic;
-
+    color: rgb(255, 145, 0);
 }
 
-.dish {
-    width: 200;
+.dish-image {
+    width: 100%;
     height: auto;
+    display: block;
 }
 
-.recipe-link {
-    font-size: 24px;
+.byline {
+    font-weight: bold;
+    font-size:larger;
+}
+
+.recipe-list {
+    font-size: 18px; 
+}
+
+.recipe-list li {
+    box-sizing: border-box;
+    display: inline-block;
+    width: 180px;
+    height: 75px;
+    padding: 18px;
+    margin: 18px;
+    border: 2px;
+    border-style:solid;
+    border-color: white;
+    background-color:cornsilk;
+    text-align: center; 
+    vertical-align: top;
+}
+
+.ingredients-box, .directions-box {
+    box-sizing: border-box;
+    display: inline-block;
+    width: 45%;
+    height: 500px;
+    padding: 18px;
+    padding-top: 0px;
+    margin: 18px;
+    border: 2px;
+    border-style:solid;
+    border-color: white;
+    background-color:cornsilk;
+    text-align: left;
+    vertical-align: top;
+    
+}
+
+.ingredients-box {
+    line-height: 180%;
+}
+
+.directions-box {
+    line-height: 130%;
+}
+
+.directions-box li {
+    padding-bottom: 20px;
 }
